Cel 667 upgrade spring version (#26)
* Upgrade spring version to 4.3.18.RELEASE.

* Remove irrelevant angular-resource version.

* Upgrade spring-security version to 4.2.4.RELEASE

* Replace all double slashes "//" with single slash in the URL.

--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/admin/admin-tools.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/admin/admin-tools.html
@@ -3,7 +3,7 @@
 <head>
     <!-- AngularJS and Angular UI -->
     <script type="text/javascript" src="../../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../../lib/angularjs/watch-fighters.js"></script>
     <script type="text/javascript" src="../../lib/angular-ui/angular-ui.js"></script>
 
