--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/blog.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/blog.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="../lib/detect-js/detect.js"></script>
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
     <link rel="stylesheet" href="../lib/angular-ui/angular-ui.min.css">
     <script type="text/javascript" src="../script/enums.js"></script>
