--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/error/403.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/error/403.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../../script/util/logging.js"></script>
     <script src="../../lib/jquery/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../../lib/angular-ui/angular-ui.min.js"></script>
     <script type="text/javascript" src="../../script/error-catcher.js"></script>
     <script type="text/javascript" src="../../script/validators.js"></script>
