--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/news.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/news.html
@@ -14,7 +14,7 @@
     <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
     <script type="text/javascript" src="../lib/jquery/jquery.cookie.js"></script>
     <script type="text/javascript" src="../lib/detect-js/detect.js"></script>
