--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/reset-password.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/reset-password.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css">
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
     <link rel="stylesheet" href="../lib/angular-ui/angular-ui.min.css">
 
