--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/authentication.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/authentication.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="../img/favicon.ico" type="img/x-icon" />
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
     <link rel="stylesheet" href="../lib/angular-ui/angular-ui.min.css">
 
