--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/billing.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/billing.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="../img/favicon.ico" type="img/x-icon"/>
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angularjs/watch-fighters.js"></script>
     <script type="text/javascript" src="../lib/angularjs/ng-infinite-scroll.min.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
