--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/index.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/index.html
@@ -16,7 +16,7 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
     <link rel="stylesheet" href="../lib/angular-ui/angular-ui.min.css">
 
