--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/labMembershipMessage.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/labMembershipMessage.html
@@ -32,7 +32,7 @@
 
     <!-- AngularJS and Angular UI -->
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angularjs/watch-fighters.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.js"></script>
     <link rel="stylesheet" href="../lib/angular-ui/angular-ui.css">
