--- a/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/requestDownloadExperiment.html
+++ b/chorus/webapp/src/main/webapp/WEB-INF/resources/pages/requestDownloadExperiment.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="../lib/detect-js/detect.js"></script>
 
     <script type="text/javascript" src="../lib/angularjs/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angularjs/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../lib/angularjs/angular-resource-patched.js"></script>
     <script type="text/javascript" src="../lib/angular-ui/angular-ui.min.js"></script>
     <script type="text/javascript" src="../script/error-catcher.js"></script>
     <script type="text/javascript" src="../script/enums.js"></script>
